--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "grunt-contrib-uglify": "*"
   },
   "optionalDependencies": {
-    "node-forge": "0.6.39"
+    "node-forge": "^0.7.1"
   },
   "dependencies": {
     "grunt": "^0.4.5",
